--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,14 +1,12 @@
-<div class="sidenav">
-    <div class="logo_container">
-        <button class="logo"> </button>
-        <div class="logo_text"></div>
-        <button class="btn_close"></button>
-    </div>
+<div class="sidenav" [ngClass]="  'sidenav-collapsed'">
+   
     <ul class="sidenav_nav">
         <li class="sidenav_nav_item" *ngFor="let data of navData">
-            <a  class="sidenav_nav_link" [routerLink]="[data.routerLink]">
+            <a href="#" class="sidenav_nav_link" [routerLink]="[data.routerLink]" routerLinkActive="active"
+                [routerLinkActiveOptions]="{exact: true}">
                 <i class="sidenav_link_icon" [class]="data.icon"></i>
-                <span class="sidenav_link_text" *ngIf="collapsed">{{data.label}}</span>
+
+                <span class="sidenav_link_text">{{data.label}}</span>
             </a>
         </li>
     </ul>
