se ha modificado  para quede tod o en la pantalla con logica

--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,13 +1,13 @@
 .body {
-    width: calc(80% - 8rem);
+    width: calc(100% - 32rem);
     height: 100vh;
-    margin-left: 10rem;
+    margin-left: 21rem;
     margin-top: 7rem;
     z-index: 1;
     position: relative;
     top: 0;
     transition: all .5s ease;
-    background: #f4f7fa;
+    background: #fff;
     padding: 3rem;
     border-radius: 15px;
 
