--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     position: relative;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: "Ubuntu", sans-serif;
+    background: #ccc;
 }
