--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
-
+<app-perfil></app-perfil>
 <app-body ></app-body>
+<app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
