solo falta la nevagacion y empesa r con las ssciones

--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,7 +1,7 @@
 <div class="perfil">
 
     <div class="imagen">
-        <img src="../../assets/img/leo2.jpg" alt="">
+        <img src="../../assets/img/leonardo1-removebg-preview (1).png" alt="">
     </div>
     <div class="container">
 
@@ -10,11 +10,59 @@
 
 
         <div class="social">
+            <div class="card">
+                <a href="#" class="socialContainer containerOne">
+                    <i class="ri-linkedin-fill"></i>
+                </a>
 
+                <a href="#" class="socialContainer containerTwo">
+                    <i class="ri-github-fill"></i>
+                </a>
+
+                <a href="#" class="socialContainer containerThree">
+                    <i class="ri-instagram-fill"></i>
+                </a>
+            </div>
         </div>
 
         <div class="info">
-            
+            <div class="cardperson">
+                <i class="ri-smartphone-line phone"></i>
+                <div class="info_person">
+                    <h6>Telefono</h6>
+                    <p>+57 311 496 3256</p>
+                </div>
+
+            </div>
+            <div class="cardperson">
+                <i class="ri-mail-open-line email"></i>
+                <div class="info_person">
+                    <h6>Email</h6>
+                    <p>leonardopoved&#64;gmail.com</p>
+                </div>
+
+            </div>
+            <div class="cardperson">
+                <i class="ri-map-pin-2-fill map"></i>
+                <div class="info_person">
+                    <h6>Ubicacion</h6>
+                    <p>Colombia, Bogota D.C</p>
+                </div>
+
+            </div>
+            <div class="cardperson">
+                <i class="ri-gift-line regalo"></i>
+                <div class="info_person">
+                    <h6>Nacimiento</h6>
+                    <p>2001/08/26</p>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="buttons">
+            <a download="" href="img/Leonardo Poveda Hoja de vida.pdf" class=" button_flex">
+                Descargar CV <i class="uil uil-arrow-down inicio__scroll-arrow"></i></a>
         </div>
     </div>
 </div>
