--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -1,27 +1,31 @@
-.perfil{
+.perfil {
     width: auto;
     height: auto;
 }
 
 
 .imagen {
-    background: #ccc;
+    background: #475099;
     margin: 10px;
     position: fixed;
     z-index: 2;
     top: 0;
-    left: 62px;
-    width: 180px;
-    height: 190px;
+    left: 80px;
+    width: 150px;
+    height: 150px;
     border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Definición de la sombra */
+
 
 }
 
-.imagen img{
-    width: 180px;
-    height: 190px;
+.imagen img {
+    width: 150px;
+    height: 150px;
     border-radius: 15px;
 }
+
 .container {
     background: #ffffff;
     margin: 10px;
@@ -31,14 +35,165 @@
     left: 10px;
     display: flex;
     width: 18rem;
-    height: 80vh;
+    height: 85vh;
     border-radius: 15px;
     flex-direction: column;
     align-items: center;
 
 }
 
-h1{
-    margin-top: 105px;
+h1 {
+    margin-top: 80px;
+    font-size: 18px;
+}
+
+span {
+    padding: 10px;
+    background: #dddddd7d;
+    font-size: 13px;
+    font-weight: 600;
+    color: #292929;
+    margin-top: 5px;
+    border-radius: 10px;
+}
+
+.card {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+/* for all social containers*/
+.socialContainer {
+    background: #dddddd7d;
+    border-radius: 5px;
+    margin-top: 10px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    text-decoration: none;
+    transition-duration: .3s;
+}
+
+/* linkdin*/
+.containerOne {
+    color: #000dfa;
+}
+
+/* linkdin*/
+.containerOne:hover {
+    background-color: #000cfa3e;
+    transform: scale(1.3);
+}
+
+/* github*/
+.containerTwo {
+    color: #000;
+
+}
+
+/* github*/
+.containerTwo:hover {
+    background-color: #00000051;
+    transform: scale(1.3);
+}
+
+/* instagram*/
+.containerThree {
+    color: #ea07ff;
+}
+
+/* instagram*/
+.containerThree:hover {
+    background-color: #a81bb56a;
+    transform: scale(1.3);
+}
+
+.socialContainer:active {
+    transform: scale(0.9);
+    transition-duration: .3s;
+}
+
+
+/* //////// */
+.info {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    border-radius: 10px;
+    padding: 15px;
+    align-items: center;
+    justify-content: center;
+    background: #dddddd7d;
+    margin-top: 10px;
+    flex-direction: column;
+}
+
+.cardperson {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.cardperson i {
+    background-color: #fff;
+    padding: 10px;
     font-size: 25px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Definición de la sombra */
+
+}
+
+.cardperson .phone {
+    color: #ff0000;
+}
+
+.cardperson .email {
+    color: #369621;
+}
+
+.cardperson .map {
+    color: #a9164c;
+}
+
+.cardperson .regalo {
+    color: #ff00e1;
+}
+
+.info_person {
+    width: 160px;
+    margin-left: 10px;
+}
+
+.info_person h6 {
+    font-size: 10px;
+    color: #4d4d4d;
+}
+
+.info_person p {
+    font-size: 14px;
+    margin-top: 10px;
+    color: #000;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    background: #0f3593;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.buttons .button_flex{
+    color: #fff;
+    text-decoration: none;
 }
