--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,7 +1,7 @@
 .body {
-    width: calc(100% - 32rem);
+    width: calc(100% - 34rem);
     height: 100vh;
-    margin-left: 21rem;
+    margin-left: 23rem;
     margin-top: 7rem;
     z-index: 1;
     position: relative;
@@ -10,6 +10,7 @@
     background: #fff;
     padding: 3rem;
     border-radius: 15px;
+    box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.1);
 
 }
 
