--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -10,7 +10,7 @@
     position: fixed;
     z-index: 2;
     top: 0;
-    left: 80px;
+    left: 95px;
     width: 150px;
     height: 150px;
     border-radius: 15px;
@@ -30,15 +30,17 @@
     background: #ffffff;
     margin: 10px;
     position: fixed;
+    margin-top: 5rem;
     z-index: 1;
-    bottom: 0;
+    top: 0;
     left: 10px;
     display: flex;
-    width: 18rem;
-    height: 85vh;
+    width: 20rem;
+    height: auto;
     border-radius: 15px;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -169,7 +171,7 @@ span {
 }
 
 .info_person {
-    width: 160px;
+    width: 200px;
     margin-left: 10px;
 }
 
@@ -190,7 +192,7 @@ span {
     background: #0f3593;
     padding: 10px;
     border-radius: 5px;
-    margin-top: 10px;
+    margin: 15px;
 }
 
 .buttons .button_flex{
