--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -3,12 +3,14 @@
     margin: 10px;
     transition: all .5s ease;
     position: fixed;
+    margin-top: 5rem;
     z-index: 1;
-    bottom: 0;
+    top: 0;
     right: 10px;
     width: 8rem;
-    height: 80vh;
+    height: auto;
     border-radius: 15px;
+    box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -16,11 +18,12 @@
 .sidenav_nav {
     list-style: none;
     padding: 0.938rem;
-    margin: 0;
     display: flex;
+    gap: 9px;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
+
 }
 
 .sidenav .sidenav_nav .sidenav_nav_item {
@@ -36,6 +39,8 @@
     height: 3rem;
     width: 100%;
     height: 100%;
+    background: #dddddd7d;
+
     color: #676565;
     border-radius: 15px;
     text-decoration: none;
@@ -68,7 +73,7 @@
 }
 
 .active {
-    background-color: #0e46af;
+    background-color: #0e46af !important;
     transition: all .5s ease;
 
 }
@@ -87,4 +92,3 @@
 
 
 }
-
