se agrego titulo mejorado

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,11 @@
-<main>
+<div class="sobre_mi">
+   <div class="title">
     <h1>Sobre mi</h1>
-    
-</main>
+    <div class="line"></div>
+   </div>
+
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa magni ad cum fugiat, earum soluta ipsam
+            nihil suscipit corrupti. Aperiam non, eligendi nemo aliquam iste architecto dicta sit accusamus.</p>
+    </div>
+</div>
