se crearon cards para la seccion de sorbre mi

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,11 +1,65 @@
 <div class="sobre_mi">
-   <div class="title">
-    <h1>Sobre mi</h1>
-    <div class="line"></div>
-   </div>
+    <div class="title">
+        <h1>Sobre mi</h1>
+        <div class="line"></div>
+    </div>
 
-    <div class="container">
+    <section class="section">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa magni ad cum fugiat, earum soluta ipsam
             nihil suscipit corrupti. Aperiam non, eligendi nemo aliquam iste architecto dicta sit accusamus.</p>
-    </div>
+
+
+        <div class="wrapper">
+            <div class="container">
+                <input type="radio" name="slide" id="c1" checked>
+                <label for="c1" class="card">
+                    <div class="row">
+                        <div class="icon"> 1 </div>
+
+                        <div class="description">
+                            <h4>Winer</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus adipisci consequatur sed
+                                doloremque quidem, sequi ducimus numquam beatae assumenda ratione incidunt voluptatibus?
+                                Tempore vero illo ratione saepe magnam totam nesciunt! doloremque quidem, sequi ducimus
+                            </p>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c2">
+                <label for="c2" class="card">
+                    <div class="row">
+                        <div class="icon"> 2 </div>
+
+                        <div class="description">
+                            <h4>digital</h4>
+                            <p>winter jhas so mush to ofeer - c </p>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c3">
+                <label for="c3" class="card">
+                    <div class="row">
+                        <div class="icon"> 3 </div>
+
+                        <div class="description">
+                            <h4>Winer</h4>
+                            <p>winter jhas so mush to ofeer - c </p>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c4">
+                <label for="c4" class="card">
+                    <div class="row">
+                        <div class="icon"> 4 </div>
+
+                        <div class="description">
+                            <h4>Winer</h4>
+                            <p>winter jhas so mush to ofeer - c </p>
+                        </div>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+    </section>
 </div>
