--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,8 +1,8 @@
-.sobre_mi{
-margin: 0;
+.sobre_mi {
+    margin: 0;
 }
 
-.title{
+.title {
     display: flex;
     align-items: center;
 }
@@ -11,16 +11,126 @@ margin: 0;
     width: 30%;
     height: 3px;
     margin-left: 20px;
-    background-color: #000dfa; /* Puedes cambiar el color según tus preferencias */
-  }
+    background-color: #000dfa;
+}
 
-  .container{
+.section {
     height: auto;
     width: auto;
     display: flex;
-  }
+    flex-direction: column;
+}
 
-  .container p {
+.section p {
     margin-top: 10px;
     line-height: 22px;
-  }
+}
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.container {
+    height: 300px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
+
+.card {
+    width: 80px;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.8);
+}
+
+.card>.row {
+    color: white;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 300px;
+
+}
+
+.card>.row>.icon {
+    display: flex;
+    justify-content: center;
+    width: 60px;
+    background-color: #223;
+    color: white;
+    border-radius: 50%;
+    align-items: center;
+    margin: 11px 8px 230px 10px;
+}
+
+.card>.row>.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    overflow: hidden;
+    height: 290px;
+    width: 300px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+    position: relative;
+    top: 32px;
+}
+
+.description h4 {
+    text-transform: uppercase;
+    color: #000;
+    margin: 0;
+    /* Elimina los márgenes predeterminados */
+}
+
+.description p {
+    color: #434343;
+    margin: 0;
+    /* Elimina los márgenes predeterminados */
+    text-align: left;
+    /* Alinea el texto a la izquierda */
+}
+
+input {
+    display: none;
+}
+
+input:checked+label {
+    width: 400px;
+}
+
+input:checked+label .description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+
+
+.card[for="c1"] {
+    background-color: #e012a231;
+}
+
+.card[for="c2"] {
+    background-color: #DAF7A6;
+}
+
+.card[for="c3"] {
+    background-color: #F9E79F;
+}
+
+.card[for="c4"] {
+    background-color: #D7BDE2;
+}
