--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,22 +5,33 @@
     </div>
 
     <section class="section">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi culpa magni ad cum fugiat, earum soluta ipsam
-            nihil suscipit corrupti. Aperiam non, eligendi nemo aliquam iste architecto dicta sit accusamus.</p>
+        <p>Soy un apasionado explorador de la tecnología, impulsado por una curiosidad insaciable por aprender y crecer.
+            Mi camino en la Ingeniería de Sistemas ha sido una aventura desafiante pero gratificante, donde he cultivado
+            habilidades esenciales como la organización, resolucion de problemas y la puntualidad.
+            <br>
+            <br>
+            Con una mente creativa y una perspectiva fresca, abordo cada reto como una oportunidad para imaginar, crear
+            y transformar el mundo a mi alrededor. Inspirado por visionarios que aspiran a alcanzar las estrellas
+        </p>
 
 
         <div class="wrapper">
+            <div class="subtitle">
+                <h2>Lo que hago!</h2>
+            </div>
             <div class="container">
                 <input type="radio" name="slide" id="c1" checked>
                 <label for="c1" class="card">
                     <div class="row">
                         <div class="icon"> 1 </div>
 
-                        <div class="description">
-                            <h4>Winer</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus adipisci consequatur sed
-                                doloremque quidem, sequi ducimus numquam beatae assumenda ratione incidunt voluptatibus?
-                                Tempore vero illo ratione saepe magnam totam nesciunt! doloremque quidem, sequi ducimus
+                        <div class="description c1">
+                            <h3>App Development</h3>
+                            <p>En mis experiencias laborales previas, he tenido la oportunidad de participar en
+                                proyectos de App Development. Esto me ha permitido adquirir habilidades
+                                invaluables en trabajo en equipo, comunicación efectiva y gestión de proyectos. He
+                                contribuido activamente en el diseño, codificación y despliegue de soluciones web
+                                robustas y escalables.
                             </p>
                         </div>
                     </div>
