--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -5,7 +5,7 @@
 
 
 .imagen {
-    background: #0f3593;
+    background: #152318;
     margin: 10px;
     position: fixed;
     z-index: 2;
@@ -52,8 +52,8 @@ h1 {
 span {
     padding: 10px;
     background: #dddddd7d;
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 700;
     color: #292929;
     margin-top: 5px;
     border-radius: 10px;
@@ -85,7 +85,7 @@ span {
 
 /* linkdin*/
 .containerOne {
-    color: #000dfa;
+    color: #00b6ff;
 }
 
 /* linkdin*/
@@ -144,6 +144,8 @@ span {
     margin-top: 10px;
 }
 
+
+
 .cardperson i {
     background-color: #fff;
     padding: 10px;
@@ -176,26 +178,29 @@ span {
 }
 
 .info_person h6 {
-    font-size: 10px;
-    color: #4d4d4d;
+    font-size: 12px;
+    color: #000000;
+    font-weight: 600;
 }
 
 .info_person p {
-    font-size: 14px;
-    margin-top: 10px;
+    font-size: 15px;
+    margin-top: 5px;
     color: #000;
+    font-weight: 600;
+
 }
 
 .buttons {
     display: flex;
     justify-content: center;
-    background: #0f3593;
+    background: #0089ff;
     padding: 10px;
     border-radius: 5px;
     margin: 15px;
 }
 
-.buttons .button_flex{
+.buttons .button_flex {
     color: #fff;
     text-decoration: none;
 }
