--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,6 @@
 
 body {
     position: relative;
-    font-family: "Ubuntu", sans-serif;
+    font-family: "Crimson Text", serif;
     background-image: linear-gradient(45deg, rgba(247, 16, 109, 0.25) 0%, rgba(206, 212, 218, 0.45) 61%, rgba(218, 119, 242, 0.25) 100%);
 }
