creacion de  nuevas cards  falta modficar diseño y agregar contenido y iconos

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,61 +14,33 @@
             y transformar el mundo a mi alrededor. Inspirado por visionarios que aspiran a alcanzar las estrellas
         </p>
 
-
-        <div class="wrapper">
-            <div class="subtitle">
-                <h2>Lo que hago!</h2>
-            </div>
-            <div class="container">
-                <input type="radio" name="slide" id="c1" checked>
-                <label for="c1" class="card">
-                    <div class="row">
-                        <div class="icon"> 1 </div>
-
-                        <div class="description c1">
-                            <h3>App Development</h3>
-                            <p>En mis experiencias laborales previas, he tenido la oportunidad de participar en
-                                proyectos de App Development. Esto me ha permitido adquirir habilidades
-                                invaluables en trabajo en equipo, comunicación efectiva y gestión de proyectos. He
-                                contribuido activamente en el diseño, codificación y despliegue de soluciones web
-                                robustas y escalables.
-                            </p>
-                        </div>
-                    </div>
-                </label>
-                <input type="radio" name="slide" id="c2">
-                <label for="c2" class="card">
-                    <div class="row">
-                        <div class="icon"> 2 </div>
-
-                        <div class="description">
-                            <h4>digital</h4>
-                            <p>winter jhas so mush to ofeer - c </p>
-                        </div>
-                    </div>
-                </label>
-                <input type="radio" name="slide" id="c3">
-                <label for="c3" class="card">
-                    <div class="row">
-                        <div class="icon"> 3 </div>
-
-                        <div class="description">
-                            <h4>Winer</h4>
-                            <p>winter jhas so mush to ofeer - c </p>
-                        </div>
-                    </div>
-                </label>
-                <input type="radio" name="slide" id="c4">
-                <label for="c4" class="card">
-                    <div class="row">
-                        <div class="icon"> 4 </div>
-
-                        <div class="description">
-                            <h4>Winer</h4>
-                            <p>winter jhas so mush to ofeer - c </p>
-                        </div>
-                    </div>
-                </label>
+        <div class="container">
+            <h1 class="heading">Lo que hago!</h1>
+            <div class="box_container">
+                <div class="box">
+                    <img src="" alt="">
+                    <h3>html 5</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                        vitae, ipsam reiciendis architecto sint</p>
+                </div>
+                <div class="box">
+                    <img src="" alt="">
+                    <h3>html 5</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                        vitae, ipsam reiciendis architecto sint</p>
+                </div>
+                <div class="box">
+                    <img src="" alt="">
+                    <h3>html 5</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                        vitae, ipsam reiciendis architecto sint</p>
+                </div>
+                <div class="box">
+                    <img src="" alt="">
+                    <h3>html 5</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                        vitae, ipsam reiciendis architecto sint</p>
+                </div>
             </div>
         </div>
 
