--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,3 +1,11 @@
+* {
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: .2s linear;
+}
+
 .sobre_mi {
     margin: 0;
 }
@@ -6,6 +14,8 @@
     display: flex;
     align-items: center;
 }
+
+
 
 .line {
     width: 30%;
@@ -24,152 +34,77 @@
 .section p {
     margin-top: 10px;
     line-height: 22px;
-    font-size: 18px;
+    font-size: 15px;
     width: 100%;
-    /* Hacer que el texto ocupe todo el ancho disponible */
     text-align: justify;
-    /* Justificar el texto para que se vea bien */
+    margin-bottom: 15px;
 
-}
-
-.wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 25px;
-    flex-direction: column;
-}
-
-.subtitle {
-    display: flex;
-    justify-content: flex-start;
-    width: 100%;
-}
-
-h2 {
-    margin-bottom: 20px;
-    font-weight: 600;
 }
 
 .container {
-    height: 300px;
+    padding: 10px 2%;
+    padding-bottom: 100px;
+}
+
+.container .heading {
+    text-align: start;
+    padding-bottom: 15px;
+    color: #000000;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 0);
+    font-size: 20px;
+}
+
+.container .box_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap: 15px;
+}
+
+.container .box_container .box {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0);
+    border-radius: 5px;
+    background: #8b0e9e5f;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: start;
+    padding: 30px 20px;
 }
 
-.card {
-    width: 80px;
-    background-size: cover;
-    cursor: pointer;
-    overflow: hidden;
-    border-radius: 2rem;
-    margin: 0 10px;
-    display: flex;
-    align-items: flex-end;
-    transition: .6s cubic-bezier(.28, -0.03, 0, .99);
+.container .box_container .box img {
+    height: 80px;
 }
 
-.card>.row {
-    color: white;
-    display: flex;
-    flex-wrap: nowrap;
-    height: 300px;
-
+.container .box_container .box h3 {
+    color: #444;
+    font-size: 22px;
+    padding: 10px 0;
 }
 
-.card>.row>.icon {
-    display: flex;
-    justify-content: center;
-    width: 60px;
-    background-color: #223;
-    color: white;
-    border-radius: 50%;
-    align-items: center;
-    margin: 11px 8px 230px 10px;
+.container .box_container .box p {
+    color: #777;
+    font-size: 15px;
+    padding: 10px 0;
 }
 
-.card>.row>.description {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    overflow: hidden;
-    height: 290px;
-    width: 300px;
-    opacity: 0;
-    transform: translateY(30px);
-    transition-delay: .3s;
-    transition: all .3s ease;
-    position: relative;
-    top: 32px;
+.container .box_container .box .btn {
+    margin-top: 10px;
+    display: inline-block;
+    background: #333;
+    color: #fff;
+    font-size: 17px;
+    border-radius: 5px;
+    padding: 8px 25px;
 }
 
-.description h3 {
-    color: #000;
-    margin: 0;
+.container .box_container .box .btn .btn:hover {
+    letter-spacing: 1px;
 }
 
-
-
-.description p {
-    color: #434343;
-    margin: 0;
-    /* Elimina los márgenes predeterminados */
-    text-align: left;
-    /* Alinea el texto a la izquierda */
-    font-weight: 500;
-
+.container .box_container .box:hover {
+    box-shadow: 0 10px 15px rgba(0, 0, 0, .3);
+    transform: scale(1.02);
 }
 
-.c1 p {
-    color: #282828;
-
-
-}
-
-input {
-    display: none;
-}
-
-input:checked+label {
-    width: 400px;
-}
-
-input:checked+label .description {
-    opacity: 1 !important;
-    transform: translateY(0) !important;
-}
-
-
-.card[for="c1"] {
-    background-color: #0089ff;
-    box-shadow: 0px 0px 10px 1px #0089ff;
-    border: 0.5px solid #48ffff34;
-
-}
-
-.card[for="c2"] {
-    background-color: #00b6ff;
-    box-shadow: 0px 0px 10px 1px #00b6ff;
-    border: 0.5px solid #00eaff2a;
-
-
-}
-
-.card[for="c3"] {
-    background-color: #00eaff;
-    box-shadow: 0px 0px 10px 1px #00eaff;
-    border: 0.5px solid #00b7ff35;
-
-
-}
-
-.card[for="c4"] {
-    background-color: #48ffff;
-    box-shadow: 0px 0px 10px 1px #48ffff;
-    border: 0.1px solid #0088ff2f;
-
+@media(max-width:768px) {
+    .container {
+        padding: 20px;
+    }
 }
