--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,32 +17,85 @@
         <div class="container">
             <h1 class="heading">Lo que hago!</h1>
             <div class="box_container">
-                <div class="box">
-                    <img src="" alt="">
-                    <h3>html 5</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                        vitae, ipsam reiciendis architecto sint</p>
+                <div class="box b1">
+                    <div class="icon"><i class=" fa-solid fa-swatchbook"></i></div>
+                    <div class="text">
+                        <h4>Ui/Ux Design</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                            vitae, ipsam reiciendis architecto sint</p>
+                    </div>
                 </div>
-                <div class="box">
-                    <img src="" alt="">
-                    <h3>html 5</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                        vitae, ipsam reiciendis architecto sint</p>
+                <div class="box b2">
+                    <div class="icon"><i class="fa-solid fa-laptop-code"></i></div>
+                    <div class="text">
+                        <h4>App Development</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                            vitae, ipsam reiciendis architecto sint</p>
+                    </div>
                 </div>
-                <div class="box">
-                    <img src="" alt="">
-                    <h3>html 5</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                        vitae, ipsam reiciendis architecto sint</p>
+                <div class="box b2">
+                    <div class="icon"><i class="fa-solid fa-code"></i></div>
+                    <div class="text">
+                        <h4>Web Development</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
+                            vitae, ipsam reiciendis architecto sint</p>
+                    </div>
                 </div>
-                <div class="box">
-                    <img src="" alt="">
-                    <h3>html 5</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
-                        vitae, ipsam reiciendis architecto sint</p>
-                </div>
+
             </div>
         </div>
 
+        <div class="wrapper">
+            <h1 class="subtitle">Lo que me gusta</h1>
+            <div class="container1">
+                <input type="radio" name="slide" id="c1" checked>
+                <label for="c1" class="card">
+                    <div class="row">
+                        <div class="icon"> <img src="../../assets/img/iconmontaña.png" alt=""></div>
+
+                        <div class="description c1">
+                            <h3>Montañismo</h3>
+
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c2">
+                <label for="c2" class="card">
+                    <div class="row">
+                        <div class="icon"> <img src="../../assets/img/iconspace.png" alt=""></div>
+
+                        <div class="description c2">
+                            <h3>Espacio</h3>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c3">
+                <label for="c3" class="card">
+                    <div class="row">
+                        <div class="icon"> <img src="../../assets/img/iconmusic.jpeg" alt=""></div>
+
+                        <div class="description c3">
+                            <h3>Musica</h3>
+                        </div>
+                    </div>
+                </label>
+                <input type="radio" name="slide" id="c4">
+                <label for="c4" class="card">
+                    <div class="row">
+                        <div class="icon"> <img src="../../assets/img/icontecnologia.png" alt=""></div>
+
+                        <div class="description c4">
+                            <h3>Tecnologia</h3>
+                        </div>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <!-- <div class="footer">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet labore non quos velit itaque optio
+                sapiente iure natus! Quaerat maiores qui, omnis illum earum reprehenderit eveniet exercitationem quam
+                incidunt asperiores.</p>
+        </div> -->
     </section>
 </div>
