--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -8,9 +8,8 @@
     top: 0;
     transition: all .5s ease;
     background: #fff;
-    padding: 3rem;
+    padding: 2rem 3rem 0rem 3rem;
     border-radius: 15px;
     box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.1);
 
 }
-
