--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,97 @@
-
 <div class="resumen">
-    <h1>Resumen</h1>
-    <div class="line"></div>
+    <div class="title">
+        <h1>Resumen</h1>
+        <div class="line"></div>
+    </div>
+    <section class="section">
+
+        <div class="container">
+            <div class="conte">
+
+                <h1 class="heading"><i class='bx bxs-graduation'></i>Educacion</h1>
+                <div class="box_container">
+                    <div class="box b1">
+                        <div class="text">
+                            <div class="experiencia__calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                <p>2019 Finalizado </p>
+                            </div>
+
+                            <h4>Bachillerato </h4>
+                            <p>Jorge Eliecer Gaitan </p>
+                            <p>Colombia
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box b2">
+                        <div class="text">
+                            <div class="experiencia__calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                <p>2023 Finalizado </p>
+                            </div>
+
+                            <h4>Analisis y Desarrollo De Sistemas De Informacion </h4>
+                            <p>Sena - Tecnologo </p>
+                            <p>Colombia
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box b1">
+                        <div class="text">
+                            <div class="experiencia__calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                <p> 2019/Actualmente 7º</p>
+                            </div>
+
+                            <h4>Ingenieria de Sistemas</h4>
+                            <p>UNAD </p>
+                            <p>Colombia
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="conte">
+                <h1 class="heading"><i class=" fa-solid fa-swatchbook"></i>Experiencia</h1>
+                <div class="box_container">
+                    <div class="box b2">
+                        <div class="text">
+                            <div class="experiencia__calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                <p> 2022/2023 Finalizado </p>
+                            </div>
+
+                            <h4>Auxiliar Frontend </h4>
+                            <p>Lineru - Tangelo </p>
+                            <p>Colombia
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box b1">
+                        <div class="text">
+                            <div class="experiencia__calendar">
+                                <i class="uil uil-calendar-alt"></i>
+                                <p> 2022/2023 Finalizado </p>
+                            </div>
+
+                            <h4>Auxiliar Qa Analyst </h4>
+                            <p>Lineru - Tangelo </p>
+                            <p>Colombia
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                            </p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+
+    </section>
 </div>
