--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -7,7 +7,6 @@
 
         <div class="container">
             <div class="conte">
-
                 <h1 class="heading"><i class='bx bxs-graduation'></i>Educacion</h1>
                 <div class="box_container">
                     <div class="box b1">
@@ -56,7 +55,7 @@
                 </div>
             </div>
             <div class="conte">
-                <h1 class="heading"><i class=" fa-solid fa-swatchbook"></i>Experiencia</h1>
+                <h1 class="heading"><i class='bx bxs-briefcase-alt-2'></i>Experiencia</h1>
                 <div class="box_container">
                     <div class="box b2">
                         <div class="text">
@@ -64,7 +63,6 @@
                                 <i class="uil uil-calendar-alt"></i>
                                 <p> 2022/2023 Finalizado </p>
                             </div>
-
                             <h4>Auxiliar Frontend </h4>
                             <p>Lineru - Tangelo </p>
                             <p>Colombia
@@ -78,7 +76,6 @@
                                 <i class="uil uil-calendar-alt"></i>
                                 <p> 2022/2023 Finalizado </p>
                             </div>
-
                             <h4>Auxiliar Qa Analyst </h4>
                             <p>Lineru - Tangelo </p>
                             <p>Colombia
@@ -86,12 +83,12 @@
                             </p>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
-
+        <div class="habilidades">
+            
+        </div>
 
     </section>
 </div>
