--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,7 +18,7 @@
             <h1 class="heading">Lo que hago!</h1>
             <div class="box_container">
                 <div class="box b1">
-                    <div class="icon"><i class=" fa-solid fa-swatchbook"></i></div>
+                    <div class="icon "><i class=" fa-solid fa-swatchbook"></i></div>
                     <div class="text">
                         <h4>Ui/Ux Design</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sit ratione, voluptate
@@ -47,6 +47,9 @@
 
         <div class="wrapper">
             <h1 class="subtitle">Lo que me gusta</h1>
+            <p>Soy un apasionado explorador de la tecnología, impulsado por una curiosidad insaciable por aprender y crecer.
+                Mi camino en la Ingeniería de Sistemas ha sido una aventura desafiante pero gratificante, donde he cultivad
+            </p>
             <div class="container1">
                 <input type="radio" name="slide" id="c1" checked>
                 <label for="c1" class="card">
