--- a/src/styles.css
+++ b/src/styles.css
@@ -9,5 +9,5 @@
 body {
     position: relative;
     font-family: "Poppins", sans-serif;
-    background-image: linear-gradient(45deg, rgba(247, 16, 109, 0.25) 0%, rgba(206, 212, 218, 0.45) 61%, rgba(218, 119, 242, 0.25) 100%);
+    background: #dddddd7d;
 }
